--- a/_layouts/knowledge-base.html
+++ b/_layouts/knowledge-base.html
@@ -68,15 +68,18 @@
             {% endif %}
           </header>
 
-          <article class="kb-article">
-            {{ content }}
-          </article>
+          <!-- Content Card -->
+          <div class="kb-content-card">
+            <article class="kb-article">
+              {{ content }}
+            </article>
 
-          <footer class="kb-footer">
-            <div class="footer-content">
-              <p class="copyright">© 2024 SentinelFox Private Ltd. All rights reserved.</p>
-            </div>
-          </footer>
+            <footer class="kb-footer">
+              <div class="footer-content">
+                <p class="copyright">© 2024 SentinelFox Private Ltd. All rights reserved.</p>
+              </div>
+            </footer>
+          </div>
         </div>
       </main>
     </div>
